[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameBackGround.tscn" type="PackedScene" id=1]
[ext_resource path="res://Bird.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Bird" parent="." instance=ExtResource( 2 )]
position = Vector2( 143, 302 )
z_index = 2

[node name="Pipes" type="Node2D" parent="."]

[node name="GameBackGround" parent="." instance=ExtResource( 1 )]
z_index = -1

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="PipeSpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="game_ends" from="Bird" to="." method="_on_Bird_game_ends"]
[connection signal="timeout" from="PipeSpawnTimer" to="." method="_on_PipeSpawnTimer_timeout"]
